<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <include layout="@layout/tg_common_view_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.turingoal.common.android.ui.layout.TgTitleContextLinearLayout
            android:id="@+id/tclCodeNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextStr="@string/string_material_add_coding" />

        <com.turingoal.common.android.ui.layout.TgTitleContextLinearLayout
            android:id="@+id/tclTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextStr="@string/string_material_add_name" />

        <com.turingoal.common.android.ui.layout.TgTitleContextLinearLayout
            android:id="@+id/tclMaterialType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextStr="@string/string_material_add_type" />

        <com.turingoal.common.android.ui.layout.TgTitleContextLinearLayout
            android:id="@+id/tclMaterialSpecification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextStr="@string/string_material_add_specification" />

        <com.turingoal.common.android.ui.layout.TgTitleContextLinearLayout
            android:id="@+id/tclMaterialUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextStr="@string/string_material_add_unit" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_10"
        android:background="#AFAFAF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_material_add_num"
            android:textColor="@color/black" />

        <com.turingoal.common.android.ui.layout.TgBigDecimalNumAddSubLinearLayout
            android:id="@+id/nasNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btnMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/bg_btn_blue_style"
        android:gravity="center"
        android:text="@string/string_material_add"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/sp_18" />
</LinearLayout>